[gd_scene load_steps=15 format=3 uid="uid://dptgi81hyimlb"]

[ext_resource type="Script" uid="uid://b0t1cg5rsfjuu" path="res://scripts/npc/npc.gd" id="1_k75in"]
[ext_resource type="Script" uid="uid://bnjdbc04lee2u" path="res://scripts/npc/jobs.gd" id="2_3ak68"]
[ext_resource type="Script" uid="uid://du5mtwnmpjcs2" path="res://scripts/npc/jobs/blacksmith.gd" id="2_yq5wv"]
[ext_resource type="Script" uid="uid://vb40usgxql0s" path="res://scripts/quests/get_something_quest.gd" id="4_i3n4k"]
[ext_resource type="Script" uid="uid://d3yh5vbtrdxp0" path="res://scripts/npc/none.gd" id="4_se8i8"]
[ext_resource type="Script" uid="uid://c7pim11lbdqyc" path="res://scripts/quests/collect_items_quest.gd" id="5_3egug"]
[ext_resource type="Script" uid="uid://0gx1d8pnmjgd" path="res://scripts/quests/use_station_quest.gd" id="6_cmg02"]
[ext_resource type="Script" uid="uid://6ldywjhmi7eq" path="res://scripts/npc/jobs/miner.gd" id="6_fnw6m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mhefn"]
size = Vector3(1.6, 2, 1.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_3ak68"]
size = Vector3(10, 2, 10)

[sub_resource type="BoxMesh" id="BoxMesh_yq5wv"]
size = Vector3(1.6, 2, 1.6)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k75in"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k75in"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yq5wv"]
material = SubResource("StandardMaterial3D_k75in")

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_k75in")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mhefn")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_3ak68")

[node name="Mesh" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mesh"]
mesh = SubResource("BoxMesh_yq5wv")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mesh/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.5, 0.5)
mesh = SubResource("CapsuleMesh_k75in")

[node name="Marker" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 0.7, 0, 0, 0, 1, 0, 2.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_yq5wv")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Jobs" type="Node" parent="."]
script = ExtResource("2_3ak68")

[node name="Blacksmith" type="Node" parent="Jobs"]
script = ExtResource("2_yq5wv")

[node name="Stage1Quest" type="Node" parent="Jobs/Blacksmith"]
script = ExtResource("4_i3n4k")
quest_name = "Get iron from the mine"
quest_description = "Talk to the Miner"
reached_goal_text = "Return the Blacksmith!"
metadata/_custom_type_script = "uid://vb40usgxql0s"

[node name="Stage2Quest" type="Node" parent="Jobs/Blacksmith"]
script = ExtResource("5_3egug")
quest_name = "Collect 20 Lumber"
quest_description = "Collect 20 Lumber for the Blacksmith"
reached_goal_text = "Return to the Blacksmith"
metadata/_custom_type_script = "uid://c7pim11lbdqyc"

[node name="Stage3Quest" type="Node" parent="Jobs/Blacksmith"]
script = ExtResource("4_i3n4k")
quest_name = "Give lumber to the Carpenter"
quest_description = "Bring 20 lumber to the Carpenter"
reached_goal_text = "Bring the sticks back to the Blacksmith"
metadata/_custom_type_script = "uid://vb40usgxql0s"

[node name="Stage4Quest" type="Node" parent="Jobs/Blacksmith"]
script = ExtResource("4_i3n4k")
quest_name = "Get coal from the Miner"
quest_description = "Get 5 coal from the Miner"
reached_goal_text = "Return to the Blacksmith"
metadata/_custom_type_script = "uid://vb40usgxql0s"

[node name="Stage5Quest" type="Node" parent="Jobs/Blacksmith"]
script = ExtResource("6_cmg02")
quest_name = "Use the Furnace"
quest_description = "Use the Furnace to create Steel"
reached_goal_text = "Return to the Blacksmith"
metadata/_custom_type_script = "uid://0gx1d8pnmjgd"

[node name="None" type="Node" parent="Jobs"]
script = ExtResource("4_se8i8")

[node name="Miner" type="Node" parent="Jobs"]
script = ExtResource("6_fnw6m")

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_body_exited"]
